#
# COPYRIGHT (C) 2017-2021, zhllxt
# 
# author   : zhllxt
# email    : 37792738@qq.com
# 
# Distributed under the GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
# (See accompanying file LICENSE or see <http://www.gnu.org/licenses/>)
#

add_subdirectory (asio_udp_tps_client)
add_subdirectory (asio_udp_tps_server)

add_subdirectory (asio2_udp_tps_client)
add_subdirectory (asio2_udp_tps_server)
